force-app/src/objects/AzureAD_Group__mdt.object
<CustomObject>
    <fields>
        <fullName>AzureADService_Setting__c</fullName>
        <label>AzureADService Setting</label>
        <referenceTo>AzureADService_Setting__mdt</referenceTo>
        <relationshipLabel>AzureAD Groups</relationshipLabel>
        <relationshipName>AzureAD_Groups</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>AzureGroupId__c</fullName>
        <label>AzureGroupId</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AzureGroupName__c</fullName>
        <label>AzureGroupName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AzureAD Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>AzureADService_Setting__c</columns>
        <columns>AzureGroupName__c</columns>
        <columns>AzureGroupId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>AzureAD Groups</pluralLabel>
</CustomObject>